update fxorder resources
